[tool.poetry]
name = "contayne"
version = "0.1.0"
description = "A library that implements wrappers for common containment actions across different platforms."
authors = ["wezham <wezham1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
slack-sdk = "^3.27.1"
requests = "^2.31.0"
types-requests = "^2.31.0.20240406"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^24.3.0"
pytest = "^8.1.1"
mypy = "^1.9.0"
flake8 = "^7.0.0"

[tool.black]
line-length = 100

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
